Meu Primeiro Commit

--- a/Exemplo2.html
+++ b/Exemplo2.html
@@ -8,18 +8,12 @@
     <title>Olá Mundo</title>
 </head>
 <style scoped>
-    body
-    {background-image: url(https://i.pinimg.com/236x/d1/b4/c5/d1b4c55d16aad0553dd02f140bc57f87.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: center;}
     header
     {color: rgb(255, 135, 221);}
     nav
     {color: blue;}
     section
-    {color: rgb(128, 160, 0);}
+    {color: rgb(199, 66, 62);}
     footer
     {color: rgb(0, 110, 73);}
     
@@ -39,14 +33,14 @@
         <!--Corpo Principal-->
         <section>
             <!--Sessões do corpo principal-->
-            <center><h2>Seção 1</h2></center>
+            <h2>Seção 1</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate incidunt, eligendi accusamus beatae laudantium eum id corporis quos. Veritatis deserunt eos a totam voluptas. Tenetur iure tempora modi veritatis asperiores?</p>
             <!--Atalho: lorem + enter/tab-->
         </section>
         <br><!--Pula uma linha-->
         <hr><!--Linha-->
         <section>
-            <center><h2>Seção 2</h2></center>
+            <h2>Seção 2</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente consequuntur odit repellat nostrum aliquam delectus id sed iure debitis molestiae quia dignissimos numquam error dolor fugit libero suscipit, quibusdam hic!</p>
             <h3>Seção 2.1</h3>
         </section>
@@ -54,7 +48,7 @@
     <hr><!--Linha-->
     <footer>
         <!--Rodapé da Página-->
-        Até loguinho... =(
+        <b>Até loguinho... ;></b>
     </footer>
 </body>
 </html>
